@@ -1,4 +1,5 @@
-7/16/09 #1724, move "Glacier Evolution State" dialog to Developer menu
+7/16/09 #766, make calipers snap and show value on when ice thickness is zero, otherwise show "?"
+7/16/09 #1734, move "Glacier Evolution State" dialog to Developer menu
 7/16/09 #1733, fewer decimal places (1) for climate controls and glacial budget meter
 7/16/09 revert fix for #999, it made things worse
 # 2.01.02 (33295) Jul 14, 2009
